<resources>
    <string name="app_name">Final Project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="sample_email">Name@company.com</string>
    <string name="remember_me">Remember Me</string>
    <string name="Back">Back</string>
    <string name="forgot_password">Forgot Password? Click Here To Reset</string>
    <string name="already_registered_click_here_to_log_in">Already Registered? Click Here To Log In</string>
    <string name="press_to_receive_code">Send Reset Email</string>
    <string name="return_to_login">Return To Login</string>
    <string name="welcome">Investing For Everybody</string>
    <string name="or">or</string>
    <string name="not_registered_sign_up">Not Registered Yet? Sign Up Now!</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="description_main">Investing is not as complicated as you think, you just need to know where to start.</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="best_stocks">Today\'s Choice Stocks</string>
    <string name="worst_stocks">You Might Want To Avoid…</string>
    <string name="active_stocks">You Might Find Interesting…</string>
    <string name="sample_symbol">sample symbol</string>
    <string name="ocean_biomedical_inc">Ocean Biomedical, Inc.</string>
    <string name="_1_57">1.57$</string>
    <string name="_1_0206">1.0206$</string>
    <string name="remove">Remove Selected Stocks</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">mm / yy</string>
    <string name="ccv">ccv</string>
    <string name="yy">yy</string>
    <string name="mm">mm</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="use_an_existing_card">Use An Existing Card</string>
    <string name="pay_with_a_new_card">Pay With A New Card</string>
    <string name="sample_cvv">***</string>
    <string name="sample_date">MM/YY</string>
    <string name="sample_number">———— ———— ———— ————</string>
    <string name="add_funds">Pay Now</string>
    <string name="_0_0">$0.0</string>
    <string name="sample_name">Sample Name</string>
    <string name="view_more">View More</string>

    <string name="spinner_prompt">Select Sorting Option</string>
    <string name="your_transaction_history">Your Recent Transactions</string>
    <string name="view_more_transactions">View Transaction History</string>
    <string name="your_credit_cards">Your Credit Cards</string>
    <string name="manage_cards">Manage Cards...</string>
    <string name="your_favorite_stocks">Your Favorite Stocks</string>
    <string name="view_favorite_stock">View Favorite Stock...</string>

    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>
    <string name="last_name">Last Name</string>
    <string name="jemali">Shamqor</string>
    <string name="first_name">First Name</string>
    <string name="malphiti">Malphiti</string>
    <string name="current_funds">$</string>
    <string name="add_more_funds">Add More Funds</string>
    <string name="sample_greeting">Hey, Charlie</string>
    <string name="tv_funds_currently_available">Your Total Assets :</string>
    <string name="tv_welcome_text">Welcome To Trader</string>
    <string name="dollarsing">$</string>
    <string name="search_with_company_name_or_symbol">Search with Company name or symbol</string>
    <string name="today_s_financial_news">Today\'s Financial News</string>
    <string name="sample_text">sample text</string>
    <string name="_1">1</string>
    <string name="search_with_company_symbol">Search With Company Symbol</string>
    <string name="stocks">Stocks</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="watchlist">Watchlist</string>
    <string name="profile">Profile</string>
    <string name="price_now">Price Now : </string>
    <string name="portfolio">Portfolio</string>
    <string name="search_with_symbol">Search with Symbol</string>
    <string-array name="sort_options">
        <item>Type</item>
        <item>Date - Latest</item>
        <item>Date - Earliest</item>
        <item>Amount</item>
    </string-array>
    <string-array name="card_type_options">
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>
    <string-array name="interval_options">
        <item>1min</item>
        <item>5min</item>
        <item>15min</item>
        <item>30min</item>
        <item>1hour</item>
        <item>4hour</item>
    </string-array>
</resources>