<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/companyListFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/stocks" />

    <item
        android:id="@+id/stockNewsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/stockHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/ownedStocksFragment"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/portfolio"/>

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>