<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sauce_sans_bold"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="@color/sky_blue"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_already_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:gravity="center"
        android:text="@string/already_registered_click_here_to_log_in"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_mount"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:alpha="1"
        android:rotation="180"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_already_registered" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:text="@string/last_name"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_last_name"
        app:layout_constraintStart_toStartOf="@+id/et_last_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_custom_edit_text"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:hint="@string/jemali"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_mount" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:text="@string/first_name"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_first_name"
        app:layout_constraintStart_toStartOf="@+id/et_first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_custom_edit_text"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:hint="@string/malphiti"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:text="@string/email"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_custom_edit_text"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:hint="@string/sample_email"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:drawableEnd="@drawable/ic_email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:text="@string/password"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_custom_edit_text"
        android:drawableEnd="@drawable/ic_lock_locked"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sauce_sans_regular"
        android:text="@string/repeat_password"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_repeat_password"
        app:layout_constraintStart_toStartOf="@+id/et_repeat_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style_custom_edit_text"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableEnd="@drawable/ic_lock_locked"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/ocean_blue"
        android:fontFamily="@font/open_sauce_sans_bold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password"
        app:rippleColor="@color/sky_blue"
        app:strokeColor="@color/sky_blue"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>